# Loton

./: .gitignore  CMakeLists.txt  CentralWidget.cpp  CentralWidget.hpp  FlanProcessModel.cpp  FlanProcessModel.hpp  Loton.pro  LotonController.hpp  LotonFlowScene.cpp  LotonFlowScene.hpp  LotonNodeModel.cpp  LotonNodeModel.hpp  MainWindow.cpp  MainWindow.hpp  README.md  Registration.cpp  Settings.cpp  Settings.hpp  main.cpp
AudioProcessModels/: AudioConvertToFunctionModel.cpp  AudioConvertToFunctionModel.hpp  AudioConvertToLeftRightModel.cpp  AudioConvertToLeftRightModel.hpp  AudioConvertToMidSideModel.hpp  AudioConvertToMonoModel.hpp  AudioConvertToPVOCModel.cpp  AudioConvertToPVOCModel.hpp  AudioConvertToStereoModel.cpp  AudioConvertToStereoModel.hpp  AudioConvolveModel.cpp  AudioConvolveModel.hpp  AudioCutModel.cpp  AudioCutModel.hpp  AudioDelayModel.cpp  AudioDelayModel.hpp  AudioEnergyModel.cpp  AudioEnergyModel.hpp  AudioFadesModel.cpp  AudioFadesModel.hpp  AudioFeedbackProcessModel.cpp  AudioFeedbackProcessModel.hpp  AudioGrainSelectModel.cpp  AudioGrainSelectModel.hpp  AudioInfoProcessModel.cpp  AudioInvertPhaseModel.cpp  AudioInvertPhaseModel.hpp  AudioIterateModel.cpp  AudioIterateModel.hpp  AudioJoinModel.hpp  AudioLengthModel.hpp  AudioMaxModel.cpp  AudioMixModel.cpp  AudioMixModel.hpp  AudioModifyVolumeModel.cpp  AudioModifyVolumeModel.hpp  AudioPanModel.cpp  AudioPanModel.hpp  AudioProcessModel.cpp  AudioProcessModel.hpp  (+21 more)
Converters/: FunctionConverters.cpp  FunctionConverters.hpp  SoundConverters.cpp  SoundConverters.hpp
FeedbackNodeHandlers/: AudioFeedbackWorker.cpp  AudioFeedbackWorker.hpp
FunctionModels/: DistributionExponentialModel.cpp  DistributionExponentialModel.hpp  DistributionNormalModel.cpp  DistributionNormalModel.hpp  DistributionUniformIntModel.hpp  DistributionUniformRealModel.hpp  Func1x1ExponentialModel.cpp  Func1x1ExponentialModel.hpp  Func1x1PointInterpolationModel.cpp  Func1x1PointInterpolationModel.hpp  Func1x1PolynomialModel.cpp  Func1x1PolynomialModel.hpp  Func1x1SineModel.cpp  Func1x1SineModel.hpp  Func2x1SurfaceGraphModel.cpp  Func2x1SurfaceGraphModel.hpp  FunctionArithmeticNodeModel.cpp  FunctionArithmeticNodeModel.hpp  FunctionGeneratorNodeModel.cpp  FunctionGeneratorNodeModel.hpp  FunctionNodeModel.cpp  FunctionNodeModel.hpp  LuaFunc1x1Model.cpp  LuaFunc1x1Model.hpp  LuaFunc2x1Model.cpp  LuaFunc2x1Model.hpp  LuaFunc2x2Model.cpp  LuaFunc2x2Model.hpp  NumberModel.cpp  NumberModel.hpp  PointsInPlaneTestModel.cpp  PointsInPlaneTestModel.hpp
FunctionModels/LuaHandlers/: LuaPrismHandler.cpp  LuaPrismHandler.hpp  LuaUtil.cpp
NodeDataTypes/: AudioData.hpp  FunctionData.hpp  InterpolatorData.hpp  LotonNodeData.cpp  LotonNodeData.hpp  NumberData.hpp  PVOCData.hpp  TaggedNodeData.cpp  TaggedNodeData.hpp  WipeNodeData.hpp
PVOCProcessModels/: PVOCAddOctavesModel.cpp  PVOCAddOctavesModel.hpp  PVOCConvertToAudioModel.cpp  PVOCConvertToAudioModel.hpp  PVOCDesampleModel.cpp  PVOCDesampleModel.hpp  PVOCGenerateModel.cpp  PVOCGenerateModel.hpp  PVOCGetFrameModel.cpp  PVOCGetFrameModel.hpp  PVOCModifyFrequencyModel.cpp  PVOCModifyFrequencyModel.hpp  PVOCModifyModel.cpp  PVOCModifyModel.hpp  PVOCModifyTimeModel.cpp  PVOCModifyTimeModel.hpp  PVOCPrismModel.cpp  PVOCPrismModel.hpp  PVOCProcessModel.cpp  PVOCRemoveNLoudestPartialsModel.cpp  PVOCRemoveNLoudestPartialsModel.hpp  PVOCRepitchModel.cpp  PVOCRepitchModel.hpp  PVOCReplaceAmplitudesModel.cpp  PVOCReplaceAmplitudesModel.hpp  PVOCResonateModel.cpp  PVOCResonateModel.hpp  PVOCRetainNLoudestPartialsModel.cpp  PVOCRetainNLoudestPartialsModel.hpp  PVOCSelectModel.cpp  PVOCSelectModel.hpp  PVOCSourceDataModel.hpp  PVOCStretchModel.cpp  PVOCStretchModel.hpp  PVOCSubtractAmplitudesModel.cpp  PVOCSubtractAmplitudesModel.hpp
Resources/: Loton.qrc  Loton.rc
Resources/Theme/: dark.qss
Widgets/: AudioPlayer.cpp  AudioPlayer.hpp  BypassButton.hpp  ControllableLogPlot.cpp  ControllableLogPlot.hpp  FunctionGeneratorPlot2x1.cpp  LED.hpp  LuaSyntaxHighlighter.hpp  OnOffButton.hpp  PVOCPlayer.cpp  PVOCPlayer.hpp  ProcessExplorer.cpp  ProcessExplorer.hpp  RoundedDialog.hpp  SampleExplorer.cpp  SampleExplorer.hpp  SettingsMenu.cpp  SpectrographIcon.cpp  SpectrographIcon.hpp  StringDisplay.cpp  StringDisplay.hpp  TextEditor.hpp
Widgets/PointsInPlane/: Point2x1Graph.hpp  PointsInPlaneView.cpp
cmake/: FindQwt.cmake
cmake/Modules/: FindFlan.cmake  FindLuaJit.cmake  FindNodeEditor.cmake
src/: CentralWidget.cpp  CentralWidget.hpp  FlanProcessModel.cpp  LotonController.cpp  LotonFlowScene.cpp  LotonNodeModel.cpp  MainWindow.cpp  MainWindow.hpp  NodeControlPanel.cpp  NodeControlPanel.hpp  Registration.cpp  Registration.hpp  Settings.cpp  TypeInfo.hpp  main.cpp
src/AudioProcessModels/: AudioConvertToLeftRightModel.hpp  AudioConvertToMidSideModel.cpp  AudioConvertToMidSideModel.hpp  AudioConvertToMonoModel.cpp  AudioConvertToStereoModel.hpp  AudioConvolveModel.hpp  AudioCutModel.cpp  AudioCutModel.hpp  AudioDelayModel.cpp  AudioEnergyModel.hpp  AudioFadesModel.cpp  AudioFadesModel.hpp  AudioFeedbackProcessModel.cpp  AudioFeedbackProcessModel.hpp  AudioGrainSelectModel.cpp  AudioInfoProcessModel.hpp  AudioInvertPhaseModel.hpp  AudioIterateModel.cpp  AudioJoinModel.cpp  AudioLengthModel.cpp  AudioLengthModel.hpp  AudioMaxModel.hpp  AudioMixModel.hpp  AudioModifyVolumeModel.cpp  AudioPanModel.hpp  AudioSetVolumeModel.cpp  AudioSetVolumeModel.hpp  AudioSimpleTransformModel.cpp  AudioSimpleTransformModel.hpp  AudioSingleSliderProcessModel.cpp  AudioSourceDataModel.hpp  AudioTextureModel.cpp  AudioTextureSimpleModel.cpp  AudioTextureSimpleModel.hpp  AudioWaveshapeModel.cpp  AudioWidenModel.hpp
src/Converters/: SoundConverters.cpp
src/FeedbackNodeHandlers/: AudioFeedbackWorker.cpp  AudioFeedbackWorker.hpp
src/FunctionModels/: AudioConvertToFunctionModel.cpp  AudioConvertToFunctionModel.hpp  DistributionExponentialModel.hpp  DistributionModel.cpp  DistributionModel.hpp  DistributionUniformIntModel.cpp  DistributionUniformRealModel.cpp  DistributionUniformRealModel.hpp  Func1x1ExponentialModel.hpp  NumberModel.hpp  (+13 more)
(+66 files in other folders)
